--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href=" /favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Diário Online</title>
+    <title>Note2Note</title>
   </head>
   <body>
     <div id="root"></div>
